# AI-Design-Pro

./: .replit  pnpm-lock.yaml  pyproject.toml  replit.md
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/sentinel-api/: main.py  requirements.txt  start.sh
artifacts/sentinel-api/data/: loader.py
artifacts/sentinel-api/data/csv/: accounts_ext.csv  accounts_master.csv  pep_watchlist.csv  transactions_reg.csv  weighted_risk.csv
artifacts/sentinel-api/engines/: merkle_engine.py  network_engine.py  nlp_engine.py  pamrs_engine.py  risk_scorer.py  str_generator.py
artifacts/sentinel-g/: index.html  package.json
artifacts/sentinel-g/.replit-artifact/: artifact.toml
artifacts/sentinel-g/src/: App.tsx  index.css
artifacts/sentinel-g/src/components/: ExplainabilityPanel.tsx  Navigation.tsx
artifacts/sentinel-g/src/pages/: Dashboard.tsx  Documentation.tsx  LandingPage.tsx  Team.tsx
attached_assets/: Pasted-Act-as-a-Full-Stack-Product-Architect-and-Creative-Dire_1778316096576.txt  transactions_1778323824637.csv
